# dfit-pressure-diagnostics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: synthetic_height_recession.csv  synthetic_pressure_dependent.csv
data/benchmark/: evaluation_results.csv
dfit/: __init__.py  benchmark.py  leakoff.py  probabilistic.py
dfit-v2/: CHANGELOG.md  README.md
dfit-v2/data/: README.md  synthetic_normal.csv  synthetic_tip_extension.csv  well1_field_analog.csv
dfit-v2/data/benchmark/: metadata.csv
dfit-v2/dfit/: __init__.py  afterclosure.py  closure.py  derivatives.py  fracdesign.py  gfunction.py  isip.py  synthetic.py  workflow.py
dfit-v2/docs/: methodology.md
dfit-v2/notebooks/: 01_before_closure_gfunction.ipynb  03_leakoff_regime_classification.ipynb  04_synthetic_data_generation.ipynb  07_sensitivity_analysis.ipynb
dfit-v2/tests/: test_modules.py
notebooks/: 02_after_closure_analysis.ipynb  05_validation_barree_2015.ipynb  06_field_data_example.ipynb  08_fracture_design_bridge.ipynb  09_probabilistic_classifier.ipynb  10_dfitbench_results.ipynb
tests/: test_gfunction.py  test_workflow.py
