[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfit-pressure-diagnostics"
version = "0.9.0"
description = "Open-source Python toolkit for Diagnostic Fracture Injection Test (DFIT) interpretation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Tarun Joshi"}]
keywords = ["DFIT", "petroleum engineering", "hydraulic fracturing",
            "G-function", "leakoff", "well testing", "reservoir geomechanics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.5",
    "pandas>=1.4",
]

[project.urls]
Homepage = "https://github.com/tarunjoshi03/dfit-pressure-diagnostics"
Repository = "https://github.com/tarunjoshi03/dfit-pressure-diagnostics"

[tool.setuptools.packages.find]
include = ["dfit*"]
